RESOLVED FIXED243996
Blob URLs with fragment from opaque/unique origins cannot be loaded
https://bugs.webkit.org/show_bug.cgi?id=243996
Summary Blob URLs with fragment from opaque/unique origins cannot be loaded
Chris Dumez
Reported 2022-08-16 10:11:23 PDT
Blob URLs with fragment from opaque/unique origins cannot be loaded.
Attachments
Chris Dumez
Comment 1 2022-08-16 10:14:53 PDT
EWS
Comment 2 2022-08-16 18:39:18 PDT
Committed 253498@main (2424b6bdaf38): <https://commits.webkit.org/253498@main> Reviewed commits have been landed. Closing PR #3368 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-16 18:40:21 PDT
Note You need to log in before you can comment on or make changes to this bug.