Blob URLs with fragment from opaque/unique origins cannot be loaded https://bugs.webkit.org/show_bug.cgi?id=243996

Reviewed by Darin Adler.

To keep track of the opaque/unique security origins from blob URLs, we rely
on an originMap() in ThreadableBlobRegistry.cpp. This is needed because the
origin is serialized as "null" in the blob URL.

However, unlike the blob storage which always strips any fragment identifier
from Blob URLs because add/removing/querying, we were failing to do so when
using the originMap(). This patch fixes that.

* LayoutTests/imported/w3c/web-platform-tests/FileAPI/url/sandboxed-iframe-expected.txt:
* Source/WTF/wtf/HashMap.h:
(WTF::Y>::remove):
* Source/WTF/wtf/text/StringHash.h:
(WTF::StringViewHashTranslator::translate):
* Source/WTF/wtf/text/StringImpl.h:
* Source/WebCore/fileapi/ThreadableBlobRegistry.cpp:
(WebCore::ThreadableBlobRegistry::registerBlobURL):
(WebCore::ThreadableBlobRegistry::unregisterBlobURL):
(WebCore::ThreadableBlobRegistry::getCachedOrigin):

Canonical link: https://commits.webkit.org/253498@main